--- a/source/assets/stylesheets/scss/layout/_account.scss
+++ b/source/assets/stylesheets/scss/layout/_account.scss
@@ -6,9 +6,10 @@
     @media screen and (max-width: 768px) {
       position: fixed;
       width: 100%;
-      height: calc(100% - 60px);
+      height: 100%;
       top: 0 !important;
       left: 0 !important;
+      z-index: 2;
     }
   }
 
